2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/StatusEntry.cs: Added the ability to set Away status and Away
	  custom messages

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: bumped the revision to 0.1.5 for next iteration

2007-05-25  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter.mds: Removed WebKit references
	* NEWS: Updated for 0.1.4 release

2007-05-25  Brady Anderson <banderso@novell.com> 

	* Banter/Conversation.cs: changes to status system messages - took out
	  the two message change

2007-05-25  Boyd Timothy <btimothy@gmail.com> 

	* data/banter.schemas.in, Banter/Preferences.cs: Stubbing out some code
	  for saving custom status messages.
	* Banter/StatusEntry.cs: Fixed up a close brace indentation.

2007-05-25  Boyd Timothy <btimothy@gmail.com> 

	* Banter/Presence.cs: Add a constructor that allows you to specify both
	  a PresenceType and a message at the same time.
	* Banter/StatusEntry.cs: Cleaned up to use the already-existing
	  Banter.Presence object.
	* Banter/GroupWindow.cs: Adjust to use Banter.Presence with the
	  Banter.StatusEntry class.

2007-05-25  Boyd Timothy <btimothy@gmail.com> 

	* Banter/StatusEntry.cs: Use ModifyBg on all the included widgets to
	  have the color turn out appropriately.  Fix up the Available/Busy
	  strings so they don't get added more than once.  Use italic font
	  for the status.

2007-05-25  Boyd Timothy <btimothy@gmail.com> 

	* Banter.mdp, Banter/Makefile.am: Add StatusEntry.cs.
	* Banter/StatusEntry.cs: New widget to provide cleaner setting of
	  online status.
	* Banter/GroupWindow.cs: Took the old Gtk.Entry statusEntry out and now
	  use the StatusEntry widget.

2007-05-25  Brady Anderson <banderso@novell.com> 

	* Banter/Account.cs: removed printing the Disconnect exception message
	  since it happens every time.
	* Banter/Conversation.cs: Added system messages for presence changes
	  with a peer.

2007-05-25  Boyd Timothy <btimothy@gmail.com> 
